test add changes

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     </div>
 </section>
-<footer class="footer">
+<footer>
     <div class="footer_conteiner">
         <div>
             <a href="#" class="footer_logo">
