--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wishbone</title>
     <link href="images/favicon.svg" rel="shortcut icon" type="image/x-icon">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
     <link rel="stylesheet" href="css/style.css">
+
 
 </head>
 <body>
@@ -50,7 +53,7 @@
                 The home of beautiful architecture.
             </h1>
             <p class="section_main_text">
-            We are an architecture firm with a focus on beautiful but functional design. At its heart, we believe design is about usability and accessibility — these are the guiding principles for our work. Read more about our previous projects, our process and our team below.
+                We are an architecture firm with a focus on beautiful but functional design. At its heart, we believe design is about usability and accessibility — these are the guiding principles for our work. Read more about our previous projects, our process and our team below.
             </p>
             <a href="#" class="section_main_linc">Read more</a>
         </div>
@@ -60,7 +63,7 @@
 <section class="our_process">
     <h4>Our process</h4>
     <h2>How we do what we do.</h2>
-    <div class="box_how_what">
+    <div class="box_how_what owl-carousel">
         <div class="content_box">
             <svg width="117" height="102" viewBox="0 0 117 102" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M58.5 0C90.8087 0 117 22.8335 117 51C117 79.1665 90.8087 102 58.5 102C26.1913 102 0 79.1665 0 51C0 22.8335 26.1913 0 58.5 0ZM60.1012 41.6732L49.8425 42.666C47.5648 51.2711 45.8528 56.4007 41.2941 61.0347L43.5429 62.9922C48.9124 57.7643 50.5196 51.7654 52.441 45.2385L58.918 44.6123L65.8448 50.6462L65.1258 56.2883C57.6333 57.9622 50.7452 59.3622 44.7454 64.0397L46.9941 66C52.3121 62.0289 58.2023 60.5389 68.0806 58.5533L69.2203 49.6169L60.1012 41.6732ZM57.8219 51.6011C57.0124 50.871 55.8137 50.5782 54.6865 50.8352C53.5593 51.0922 52.679 51.859 52.384 52.8409C52.0889 53.8229 52.4251 54.8671 53.2632 55.5723C54.5326 56.6211 56.529 56.5985 57.7651 55.5214C59.0012 54.4442 59.0264 52.7051 57.8219 51.6011ZM64.0909 37.205C63.875 37.0173 63.5559 36.952 63.2666 37.0361C62.9773 37.1202 62.7673 37.3394 62.724 37.6024L62.3822 39.6876L71.4996 47.6299L73.8757 47.307C74.176 47.2666 74.4247 47.0826 74.519 46.8311C74.6133 46.5795 74.5372 46.3032 74.3223 46.1162L64.0909 37.205Z" fill="#403E3B"/>
@@ -88,6 +91,7 @@
         </div>
 
     </div>
+
 
 </section>
 <section class="section_contact">
@@ -132,5 +136,9 @@
         </ul>
     </div>
 </footer>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="js/owl.carousel.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
