finished owl-carousel

--- a/index.html
+++ b/index.html
@@ -97,6 +97,48 @@
             <p>Adipiscing elit. Nulla ut tristique libero. Nulla vitae tempor leo iaculis luctus sapien ac arcu tempor, vitae.</p>
 
         </div>
+        <div class="content_box">
+            <svg width="117" height="102" viewBox="0 0 117 102" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M58.5 0C90.8087 0 117 22.8335 117 51C117 79.1665 90.8087 102 58.5 102C26.1913 102 0 79.1665 0 51C0 22.8335 26.1913 0 58.5 0ZM60.9222 39.1052C60.7411 38.9964 60.5095 38.9702 60.3017 39.035L47.1914 43.1222C46.6557 43.2894 46.2993 43.726 46.2995 44.2148V59.6752H43.5882V62H73.4118V59.6752H70.7005V48.8889C70.7007 48.3884 70.3271 47.9439 69.7733 47.7858L61.2112 45.3389V39.5814C61.2113 39.3918 61.1034 39.214 60.9222 39.1052ZM58.5 42.0702V59.6752H49.0107V45.0297L58.5 42.0702ZM61.2112 47.7893L67.9893 49.7271V59.6752H61.2112V47.7893Z" fill="#403E3B"/>
+            </svg>
+            </svg>
+            <h5>Building</h5>
+            <p>Nulla ut tristique libero. Lorem ipsum ut tristique libero. Nulla luctus sapien ac arcu tempor, vitae lorem ipsum dolor leo iaculis.</p>
+
+        </div>
+        <div class="content_box">
+            <svg width="117" height="102" viewBox="0 0 117 102" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M58.5 0C90.8087 0 117 22.8335 117 51C117 79.1665 90.8087 102 58.5 102C26.1913 102 0 79.1665 0 51C0 22.8335 26.1913 0 58.5 0ZM51.1078 37L44.7353 44V65H57.4804V44L51.1078 37ZM71.8186 39.8H62.2598C61.3799 39.8 60.6667 40.4268 60.6667 41.2V63.6C60.6667 64.3732 61.3799 65 62.2598 65H71.8186C72.6985 65 73.4118 64.3732 73.4118 63.6V59.4H70.2255V56.6H73.4118V53.8H68.6323V51H73.4118V48.2H70.2255V45.4H73.4118V41.2C73.4118 40.4268 72.6985 39.8 71.8186 39.8ZM54.2941 59.4V62.2H47.9216V59.4H54.2941Z" fill="#403E3B"/>
+            </svg>
+            <h5>Finalizing</h5>
+            <p>Adipiscing elit. Nulla ut tristique libero. Nulla vitae tempor leo iaculis luctus sapien ac arcu tempor, vitae.</p>
+
+        </div>
+        <div class="content_box">
+            <svg width="117" height="102" viewBox="0 0 117 102" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M58.5 0C90.8087 0 117 22.8335 117 51C117 79.1665 90.8087 102 58.5 102C26.1913 102 0 79.1665 0 51C0 22.8335 26.1913 0 58.5 0ZM60.9222 39.1052C60.7411 38.9964 60.5095 38.9702 60.3017 39.035L47.1914 43.1222C46.6557 43.2894 46.2993 43.726 46.2995 44.2148V59.6752H43.5882V62H73.4118V59.6752H70.7005V48.8889C70.7007 48.3884 70.3271 47.9439 69.7733 47.7858L61.2112 45.3389V39.5814C61.2113 39.3918 61.1034 39.214 60.9222 39.1052ZM58.5 42.0702V59.6752H49.0107V45.0297L58.5 42.0702ZM61.2112 47.7893L67.9893 49.7271V59.6752H61.2112V47.7893Z" fill="#403E3B"/>
+            </svg>
+            </svg>
+            <h5>Building</h5>
+            <p>Nulla ut tristique libero. Lorem ipsum ut tristique libero. Nulla luctus sapien ac arcu tempor, vitae lorem ipsum dolor leo iaculis.</p>
+
+        </div>
+        <div class="content_box">
+            <svg width="117" height="102" viewBox="0 0 117 102" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M58.5 0C90.8087 0 117 22.8335 117 51C117 79.1665 90.8087 102 58.5 102C26.1913 102 0 79.1665 0 51C0 22.8335 26.1913 0 58.5 0ZM51.1078 37L44.7353 44V65H57.4804V44L51.1078 37ZM71.8186 39.8H62.2598C61.3799 39.8 60.6667 40.4268 60.6667 41.2V63.6C60.6667 64.3732 61.3799 65 62.2598 65H71.8186C72.6985 65 73.4118 64.3732 73.4118 63.6V59.4H70.2255V56.6H73.4118V53.8H68.6323V51H73.4118V48.2H70.2255V45.4H73.4118V41.2C73.4118 40.4268 72.6985 39.8 71.8186 39.8ZM54.2941 59.4V62.2H47.9216V59.4H54.2941Z" fill="#403E3B"/>
+            </svg>
+            <h5>Finalizing</h5>
+            <p>Adipiscing elit. Nulla ut tristique libero. Nulla vitae tempor leo iaculis luctus sapien ac arcu tempor, vitae.</p>
+
+        </div>
+        <div class="content_box">
+            <svg width="117" height="102" viewBox="0 0 117 102" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M58.5 0C90.8087 0 117 22.8335 117 51C117 79.1665 90.8087 102 58.5 102C26.1913 102 0 79.1665 0 51C0 22.8335 26.1913 0 58.5 0ZM51.1078 37L44.7353 44V65H57.4804V44L51.1078 37ZM71.8186 39.8H62.2598C61.3799 39.8 60.6667 40.4268 60.6667 41.2V63.6C60.6667 64.3732 61.3799 65 62.2598 65H71.8186C72.6985 65 73.4118 64.3732 73.4118 63.6V59.4H70.2255V56.6H73.4118V53.8H68.6323V51H73.4118V48.2H70.2255V45.4H73.4118V41.2C73.4118 40.4268 72.6985 39.8 71.8186 39.8ZM54.2941 59.4V62.2H47.9216V59.4H54.2941Z" fill="#403E3B"/>
+            </svg>
+            <h5>Finalizing</h5>
+            <p>Adipiscing elit. Nulla ut tristique libero. Nulla vitae tempor leo iaculis luctus sapien ac arcu tempor, vitae.</p>
+
+        </div>
 
     </div>
 
