rewrite main section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 </header>
 <section class="section_main">
     <div class="section_main_conteiner">
-        <div class="section_main_conteiner_1">
             <h3 class="section_main_subtitle">
                 Wishbone+Partners
             </h3>
@@ -56,8 +55,8 @@
                 We are an architecture firm with a focus on beautiful but functional design. At its heart, we believe design is about usability and accessibility — these are the guiding principles for our work. Read more about our previous projects, our process and our team below.
             </p>
             <a href="#" class="section_main_linc">Read more</a>
-        </div>
     </div>
+    <div class="bg_main"></div>
 
 </section>
 <section class="our_process">
