--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wishbone</title>
     <link href="images/favicon.svg" rel="shortcut icon" type="image/x-icon">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://resources/demos/style.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/owl.theme.default.css">
     <link rel="stylesheet" href="css/style.css">
@@ -37,12 +39,22 @@
                     <a href="#">Contact</a>
                 </li>
                 <li>
-                    <a href="#">Get template</a>
+                    <a href="#" id="opener">Get template</a>
                 </li>
             </ul>
+            <div id="dialog" title="Basic dialog">
+                <p>This is an animated dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the &apos;x&apos; icon.</p>
+                <label for="email"></label>
+                    <form action="#" class="form">
+                        <input type="email" placeholder=" e-mail" id="email">
+                        <button type="submit" class="button_submit"></button>
+
+                    </form>
+            </div>
         </nav>
     </div>
 </header>
+
 <section class="section_main">
     <div class="section_main_conteiner">
             <h3 class="section_main_subtitle">
@@ -186,7 +198,9 @@
     </div>
 </footer>
 
+<script src="https://kit.fontawesome.com/fbf3fc71fe.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 <script src="js/owl.carousel.js"></script>
 <script src="js/scripts.js"></script>
 </body>
